adding  link and readme

--- a/index.html
+++ b/index.html
@@ -126,5 +126,6 @@
       }
     }
   </script>
+  <h3><a href="https://github.com/zoofytech/romccalc/blob/main/monsters.json">Contribute</a></h3>
 </body>
 </html>
