Added some indentation

--- a/index.html
+++ b/index.html
@@ -66,12 +66,12 @@
   <h2>Monster EXP Calculator</h2>
   <label for="level">Enter Your Level:</label>
   <input type="number" id="level" min="1" max="130" />
-  <br />
+  <br /> <br />
   <input type="radio" id="baseExp" name="expType" value="base" checked />
   <label for="baseExp">Best Base EXP</label>
   <input type="radio" id="jobExp" name="expType" value="job" />
   <label for="jobExp">Best Job EXP</label>
-  <br />
+  <br /> <br />
   <input type="checkbox" id="party" />
   <label for="party">In Party (Level gap threshold increases to 35)</label>
   <br />
@@ -125,7 +125,7 @@
         document.getElementById("toggleButton").textContent = "Toggle Light Mode";
       }
     }
-  </script>
+  </script> <br />
   <h3><a href="https://github.com/zoofytech/romccalc/blob/main/monsters.json">Contribute</a></h3>
 </body>
 </html>
