making result bigger

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
       }, {});
 
       resultDiv.innerHTML = bestMonster.exp
-        ? `Best Monster: <strong>${bestMonster.name}</strong><br>EXP: <strong>${bestMonster.exp}</strong>`
+        ? `Best Monster: <h1><strong>${bestMonster.name}</strong></h1><br><h2>EXP: <strong>${bestMonster.exp}</h2></strong>`
         : "No suitable monster found.";
     }
 
