removed lvl 35 box

--- a/index.html
+++ b/index.html
@@ -72,9 +72,9 @@
   <input type="radio" id="jobExp" name="expType" value="job" />
   <label for="jobExp">Best Job EXP</label>
   <br /> <br />
-  <input type="checkbox" id="party" />
+  <!-- <input type="checkbox" id="party" />
   <label for="party">In Party (Level gap threshold increases to 35)</label>
-  <br />
+  <br /> REMOVED since this was myth-->
   <button onclick="calculateExp()">Calculate</button>
   <div id="result"></div>
 
